# cpp-deep-ranges

./: .clang-format  .travis.yml  CMakeLists.txt  DeepRange.hpp  README.md  Range.hpp  Types.hpp  main.cpp
include/: Algorithm.hpp  DeepRange.hpp  Range.hpp  Types.hpp
scripts/: ensure_git_has_no_large_files.py
test/: Tests.cpp
